version 1.0 -- UNRELEASED
    handler changes
	rysnc:
	 . Fix numericids option (Redmine#3691).
	dup:
	 . Make the .dup generated by ninjahelper more consistent with
	   example.dup.
	 . Add support for RackSpace's CloudFiles.
	   Thanks to Yuval Kogman <nothingmuch@woobling.org> for the patch.

version 0.9.10 -- September 23, 2011
    backupninja changes
	 . Fix email reports, that were broken by the new locking support.
    handler changes
	dup:
	 . Cleanup: stop supporting duplicity < 0.6.01 (Redmine#2538).
	 . Fix incorrect duplicity version check for keepincroffulls.
	   Thanks to Olivier Berger <oberger@ouvaton.org> for the patch.
	   (Closes Redmine bug #3443)
	   (Closes: #641120)
	ldap:
	 . Don't install LDAP handler, helper and example configuration file.
	   Don't mention LDAP support in documentation.
	   Official LDAP support will come back once this code has found
	   itself a maintainer. Interested? Get in touch!
	rsync:
	 . Fixing $rsync_options output when rsync is local
	   (Closes Redmine bug #3001)
	   (Closes: #639545)
	sh:
	 . Allow 'when = XXX' with spaces (Redmine#2769).
	   Thanks to aihtdikh for the patch.
	sys:
	 . Remove useless and inconsistent executable bit on handler.
    helper changes
	rdiff:
	 . Fix infinite loop when version inconsistency is detected.
	   Thanks to Chris Lamb <lamby@debian.org> for the patch.
	   (Closes: #639547)
version 0.9.9 -- May 15, 2011
    backupninja changes
	 . Use locking to avoid running concurrent instances of the same backup
	   action. Thanks to Olivier Berger <oberger@ouvaton.org> for the patch.
	   (Closes: #511300)
    handler changes
	all handlers:
	 . Stop using "local VAR" outside functions. (Closes: #530647)
	dup:
	 . Use --tempdir option rather than TMPDIR environment variable.
	   (Closes Roundup bug #598)
	 . Remove support for duplicity < 0.4.4. Even etch-backports has
	   a newer one.
   	 . Now support remove-all-inc-but-n-full command for duplicity >=