@@ -2,6 +2,7 @@ version 1.0 -- UNRELEASED
     handler changes
 	rysnc:
 	 . Fix numericids option (Redmine#3691).
+	 . Mangle $rsync_options just afterwards (Redmine#3702).
 	dup:
 	 . Make the .dup generated by ninjahelper more consistent with
 	   example.dup.
